--- a/.gitignore
+++ b/.gitignore
@@ -452,3 +452,11 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+
+##
+## Excluindo DB
+##
+*.db
+*.db-shm
+*.db-wal
