referenciando o projeto e feito entidades do domin

--- a/ProEventos-API/src/ProEventos-Persistence/ProEventos-Persistence.csproj
+++ b/ProEventos-API/src/ProEventos-Persistence/ProEventos-Persistence.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>ProEventos_Persistence</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProEventos-Domain\ProEventos-Domain.csproj" />
+  </ItemGroup>
+
 </Project>
