--- a/ProEventos-API/src/ProEventos-Application/ProEventos-Application.csproj
+++ b/ProEventos-API/src/ProEventos-Application/ProEventos-Application.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>ProEventos_Application</RootNamespace>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProEventos-Domain\ProEventos-Domain.csproj" />
+    <ProjectReference Include="..\ProEventos-Persistence\ProEventos-Persistence.csproj" />
+  </ItemGroup>
 </Project>
